--- a/scss/_K-bottomONE.scss
+++ b/scss/_K-bottomONE.scss
@@ -55,7 +55,7 @@
 
       #one {
         font-size: 40px;
-        color: #ffffff;
+        color: #efefef;
         font-weight: 700;
 
         @include breakPoints(small) {
@@ -69,7 +69,7 @@
 
       #two {
         font-size: 28px;
-        color: #ffffff;
+        color: #efefef;
         font-weight: 700;
 
         @include breakPoints(small) {
@@ -90,7 +90,7 @@
 
       #one {
         font-size: 40px;
-        color: #ffffff;
+        color: #efefef;
         font-weight: 700;
 
         @include breakPoints(small) {
@@ -104,7 +104,7 @@
 
       #two {
         font-size: 28px;
-        color: #ffffff;
+        color: #efefef;
         font-weight: 700;
 
         @include breakPoints(small) {
@@ -126,7 +126,7 @@
 
     #one {
       font-size: 40px;
-      color: #ffffff;
+      color: #efefef;
       font-weight: 700;
 
       @include breakPoints(small) {
@@ -140,7 +140,7 @@
 
     #two {
       font-size: 28px;
-      color: #ffffff;
+      color: #efefef;
       font-weight: 700;
 
       @include breakPoints(small) {
@@ -161,7 +161,7 @@
 
     #one {
       font-size: 40px;
-      color: #ffffff;
+      color: #efefef;
       font-weight: 700;
 
       @include breakPoints(small) {
@@ -175,7 +175,7 @@
 
     #two {
       font-size: 28px;
-      color: #ffffff;
+      color: #efefef;
       font-weight: 700;
 
       @include breakPoints(small) {
