--- a/scss/_B-container.scss
+++ b/scss/_B-container.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: auto;
   position: relative;
+  overflow: hidden;
 
   #backToTopFunction {
     display: flex;
@@ -20,6 +21,11 @@
     opacity: 0;
     z-index: -1;
     cursor: pointer;
+
+    &:hover {
+      background-color: #4b4b4b;
+      box-shadow: 0px 0px 20px 1px #4d8b55;
+    }
 
     #pic {
       width: 35px;
