--- a/scss/_J-midFOUR.scss
+++ b/scss/_J-midFOUR.scss
@@ -51,24 +51,18 @@
   }
 
   #play {
-    width: 228px;
-    height: 46px;
+    width: 250px;
+    height: 60px;
     position: relative;
     border: none;
     border-radius: 40px;
-    background-color: #3c3c3c;
+    background-color: #1d1d1d;
     font-size: 13px;
-    color: #f4f4f4;
-
-    @include breakPoints(small) {
-      width: 190px;
-      height: 40px;
-      font-size: 12px;
-    }
+    color: #cacaca;
 
     &:hover {
       cursor: pointer;
-      background-color: #141414;
+      background-color: #4b4b4b;
     }
   }
 }
