--- a/scss/_N-footer.scss
+++ b/scss/_N-footer.scss
@@ -2,10 +2,11 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  padding: 20px 0 20px 0;
+  padding: 12px 0 12px 0;
   align-items: center;
   border-top: solid 2px #272727;
   background-color: #1d1d1d;
+  font-size: 13px;
 
   #one {
     color: rgb(95, 95, 95);
